--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-icon-builder": "^2.0.1",
     "icns": "^0.1.0",
     "sanitize-filename": "^1.6.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "yaml": "^2.7.0"
   }
 }
